# FixedEntryApplicationFramework

./: .gitignore  BarLib.cmake  CMakeLists.txt  Doxyfile  README.txt  UILibrary.cmake  create_adapta_library.cmake  create_shared_library.cmake  library.h
BarExDriver/include/: ExDriver.h
BarExDriver/src/: ExDriver.cpp
FooExDriver/include/: CLIManager.h  ExDriver.h  ExProgramArgs.h  FooExDriver.h
FooExDriver/src/: ExDriver.cpp  ExProgramArgs.cpp  FooExDriver.cpp
UILibrary/include/: CLIManager.h  ComponentStrategy.h  ExProgramArgs.h  GUIManager.h
UILibrary/src/: ComponentStrategy.cpp  ExProgramArgs.cpp  GUIManager.cpp
src/: main.cpp
